--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="stories">Stories</string>
     <string name="feed_title">Nice to see you,\n</string>
     <string name="feed_subtitle">What\'s on your mind?</string>
+
+    <!-- Camera -->
+    <string name="send_photo">Send Photo</string>
+    <string name="camera_permission_snackbar_text">This Feature requires permission</string>
+    <string name="turn_on">Turn On</string>
 </resources>
