--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="stories">Stories</string>
     <string name="feed_title">Nice to see you,\n</string>
     <string name="feed_subtitle">What\'s on your mind?</string>
+    <string name="new_post">New Post</string>
+    <string name="comments">Comments</string>
 </resources>
