--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="factorial_hint">Insert a number to compute his factorial</string>
     <string name="compute">Compute</string>
     <string name="notification_title">The Result is:</string>
+
+
+    <!-- Chat -->
+    <string name="chats">Chats</string>
+    <string name="you_got_n_unread_messages">You got %1$d unread messages</string>
 </resources>
