adding chat details UI:bento::lipstick:

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <!-- Chat -->
     <string name="chats">Chats</string>
     <string name="you_got_n_unread_messages">You got %1$d unread messages</string>
-    <string name="app_name">Communi</string>
+    <string name="you">You</string>
+    <string name="type_something">type something ...</string>
+
 
 </resources>
