--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,10 @@
     <string name="you_got_n_unread_messages">You got %1$d unread messages</string>
     <string name="you">You</string>
     <string name="type_something">type something ...</string>
+    <string name="new_chat">New chat</string>
+    <string name="select_contact">Select a contact you would like to start a chat with.</string>
+    <string name="new_contact">New contact</string>
+    <string name="new_group">New group</string>
 
 
 </resources>
